# simon_cell_heatmap

./: .gitignore  CART Musc FIs sorted.xlsx  Create Heatmap.ipynb  Difference Heatmaps.ipynb  Future Ideas.txt  IM FI Sorted.xlsx  Untitled.ipynb  Untitled1.ipynb  data_processing.py  file_processing.py  instructions.txt  pyproject.toml  requirements.txt  sample_data_file.xlsx  streamlit_app - backup.py  streamlit_app.py  streamlit_app_previous.py  test.py  test2.py
exploratory_jupyter_notebooks/: Create Heatmap.ipynb  Curve Fitting.ipynb  Difference Heatmaps.ipynb
other_data/: CART Musc FIs sorted - Copy.xlsx  MN properties summary P7-10.csv  MN properties summary P7-10.xlsx  example_data.xlsx
