[tool.poetry]
name = "simon-heatmaps"
version = "0.1.0"
description = ""
authors = ["Elliott Fogg <elliott.fogg@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11"
streamlit = "^1.24.1"
numpy = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
scipy = "^1.11.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
